# DeepSTPP

./: pyproject.toml  setup.py
src/deepstpp/: model.py
src/deepstpp/data/: dataset.py
