[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepstpp"
version = "0.1.0"
description = "Deep spatiotemporal point process for event forecasting"
authors = [
  { name="Zihao Zhou" },
]
license = { text = "MIT" }
dependencies = [
  "plotly==4.12.0",
  "torch==1.8.1",
  "pandas==1.2.4",
  "pytz==2021.1",
  "matplotlib==3.3.4",
  "scipy==1.6.2",
  "tqdm==4.47.0",
  "numpy==1.19.5",
  "ctrnn==2.0",
  "scikit-learn==1.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepstpp*"]
